# modular-end-effector

./: .env.sample  .gitignore  LICENSE  README.md  library.json  platformio.ini  pyproject.toml  schema.json
.github/workflows/: ci.yml
effectors/: README.md
effectors/effector_template/: README.md
effectors/effector_template/3d-files/: README.md
effectors/effector_template/code/: README.md  platformio.ini
effectors/effector_template/code/src/: effector.cpp
effectors/effector_template/json_documents/: README.md  init.json  input_motor.json  input_relay.json  input_servo.json
examples/BasicEffector/: main.cpp
examples/BasicMount/: main.cpp
examples/GrabberEffector/: main.cpp
include/: ModularSerial.h
include/MSC/: EffectorNode.h  Frame.h  MountNode.h  Schema.h
interface/: hardware_spec.md
src/: EffectorNode.cpp  Frame.cpp  MountNode.cpp  Schema.cpp
test/test_frame/: test_frame.cpp
test/test_protocol/: test_protocol.cpp
test/test_schema/: test_schema.cpp
tests/: test_json_document.json
